fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -74,8 +74,9 @@ em, i {
 
 .slider-item {
   min-width: 50vw;
-  display: inline-block;
-  scroll-snap-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   border-right: 1px solid black;
 }
 
